--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   path_provider: ^2.1.3
   intl: ^0.20.2
   image_picker: ^1.1.0
+  fl_chart: ^0.68.0
   flutter_localizations: 
     sdk: flutter   
 
